--- a/wechat/src/main/webapp/xcview/html/shop/method.html
+++ b/wechat/src/main/webapp/xcview/html/shop/method.html
@@ -67,12 +67,8 @@
 					<img src="/xcview/images/pay01.png" class="BTCpanda" />支付宝
 					<div class="ul_li_bg"></div>
 				</li>
-				<li class="ul_li" data-value="weixinPublicPaymentPlugin" >
-					<img src="/xcview/images/weixin_img.png" class="weixin_img" />微信公众号
-					<div class="ul_li_bg"></div>
-				</li>
-				<li class="ul_li" data-value="weixinH5PaymentPlugin" >
-					<img src="/xcview/images/weixin_img.png" class="weixin_img" />微信H5
+				<li class="ul_li" data-value="wechatPay" >
+					<img src="/xcview/images/weixin_img.png" class="weixin_img" />微信
 					<div class="ul_li_bg"></div>
 				</li>
 				<div class="ul_li_bg"></div>
@@ -144,16 +140,15 @@
         
         $(".pay").click(function () {
             var paymentPluginId = $(".ul_li0").attr("data-value");
-//            if(paymentPluginId == 'wechatPay'){
-//                var isWeChat = window.navigator.userAgent.indexOf('MicroMessenger') > -1;
-//                if(isWeChat){
-//                    paymentPluginId = 'weixinPublicPaymentPlugin';
-//				}else{
-//                    paymentPluginId = 'weixinH5PaymentPlugin';
-//				}
+            if(paymentPluginId == 'wechatPay'){
+                var isWeChat = window.navigator.userAgent.indexOf('MicroMessenger') > -1;
+                if(isWeChat){
+                    paymentPluginId = 'weixinPublicPaymentPlugin';
+				}else{
+                    paymentPluginId = 'weixinH5PaymentPlugin';
+				}
+			}
             $("#paymentPluginId").val(paymentPluginId);
-//			}
-            alert($("#paymentPluginId").val());
             $("#payment").submit();
         });
     });
