订单列表页面渲染数据

--- a/wechat/src/main/webapp/xcview/html/shop/line_item.html
+++ b/wechat/src/main/webapp/xcview/html/shop/line_item.html
@@ -208,7 +208,7 @@
 <script type="text/javascript" src="/xcview/js/common/mui.min.js"></script>
 <script type="text/javascript" src="/xcview/js/common/common.js"></script>
 
-<!-- <script type="text/javascript" src="/xcview/js/shop/confirm_order.js"></script> -->
+<script type="text/javascript" src="/xcview/js/shop/order_details.js"></script>
 
 <script type="text/javascript" src="/xcview/js/common/popups.js"></script>  <!-- 公用弹框 -->
 
