医师推荐刷新

--- a/wechat/src/main/webapp/xcview/html/shop/recommend.html
+++ b/wechat/src/main/webapp/xcview/html/shop/recommend.html
@@ -91,8 +91,8 @@
 	<div class="recommend">
 		<div id="minirefresh" class="minirefresh-wrap">
 			<div class="minirefresh-scroll">
-			<div class="recommends">
-		<script type="text/html" id="recommends">
+		<div class="recommends">
+		<script type="text/html" id="shop_recommend">
 		{{each items as item i}}
 		<div class="list">
 			<div class="referrer">
