--- a/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
+++ b/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
@@ -360,7 +360,7 @@
 	</div>
 
 	<!-- 点击购物车出现提示开始 -->
-	<div class="shopping_trolley" style="display: block !important;">
+	<div class="shopping_trolley" style="displayss: block !important;">
 		<div class="shopping_trolley_bg"></div>
 		<div class="shopping_trolley_main" style="height:8.28rem;">
 			<div class="shopping_trolley_center">
