--- a/wechat/src/main/webapp/xcview/html/shop/order_center.html
+++ b/wechat/src/main/webapp/xcview/html/shop/order_center.html
@@ -93,13 +93,13 @@
 				{{if item.status == 'PENDING_PAYMENT'}}
 				<div class="payment_operation">等待买家付款</div>
 				{{else if item.status == 'PENDING_REVIEW'}}
-				<div class="payment_operation" style="display: none;">买家已付款</div>
+				<div class="payment_operation">买家已付款</div>
 				{{else if item.status == 'SHIPPED'}}
-				<div class="payment_operation" style="display: none;">卖家已发货</div>
+				<div class="payment_operation">卖家已发货</div>
 				{{else if item.status == 'COMPLETED'}}
-				<div class="payment_operation" style="display: none;">交易成功</div>
+				<div class="payment_operation">交易成功</div>
 				{{else if item.status == 'CANCELED'}}
-				<div class="payment_operation" style="display: none;">交易关闭</div>
+				<div class="payment_operation">交易关闭</div>
 				{{/if}}
 			</div>
 			<div class="main_product_details">
@@ -145,25 +145,31 @@
 			<div class="payment_method">
 				<div class="waiting_payment">
 					<!-- 等待买家付款 -->
+					{{if item.status == 'PENDING_PAYMENT'}}
 					<div class="immediate_payment">立即付款</div>
-					<div class="cancel_order">取消订单</div>
+					<div class="cancel_order" data-sn="{{item.sn}}">取消订单</div>
 					
 					<!-- 买家已付款 -->
-					<div class="buy_again" style="display: none;">再次购买</div>
+					{{else if item.status == 'PENDING_REVIEW'}}
+					<div class="buy_again">再次购买</div>
 
 					<!-- 卖家已发货 -->
-					<div class="check_logistics" style="display: none;">查看物流</div>
-					<div class="shipped_cancel_order" style="display: none;">再次购买</div>
-					<div class="confirm_receipt" style="display: none;">确认收货</div>
+					{{else if item.status == 'SHIPPED'}}
+					<div class="check_logistics" >查看物流</div>
+					<div class="shipped_cancel_order" >再次购买</div>
+					<div class="confirm_receipt" >确认收货</div>
 
 					<!-- 交易成功 -->
-					<div class="win_check_logistics" style="display: none;">查看物流</div>
-					<div class="win_shipped_cancel_order" style="display: none;">再次购买</div>
-					<div class="win_evaluate" style="display: none;">评价</div>   <!-- 交易成功后评价后-评价按钮隐藏 -->
+					{{else if item.status == 'COMPLETED'}}
+					<div class="win_check_logistics" >查看物流</div>
+					<div class="win_shipped_cancel_order" >再次购买</div>
+					<div class="win_evaluate" >评价</div>   <!-- 交易成功后评价后-评价按钮隐藏 -->
 					
 					<!-- 交易关闭 -->
-					<div class="delete_order" style="display: none;">删除订单</div>
-					<div class="fack_shipped_cancel_order" style="display: none;">再次购买</div>
+					{{else if item.status == 'CANCELED'}}
+					<div class="delete_order" >删除订单</div>
+					<div class="fack_shipped_cancel_order" >再次购买</div>
+					{{/if}}
 				</div>
 			</div>
 		</div>
@@ -258,7 +264,7 @@
 			<div class="reminder-main">确认删除该订单？</div>
 			<div class="removeitem-choice">
 				<div class="countermand">取消</div>
-				<div class="affirm">确认</div>
+				<div class="affirm" onclick="cancelOrder()">确认</div>
 			</div>
 		</div>
 	</div>
@@ -270,15 +276,6 @@
 
 <script type="text/javascript" src="/xcview/js/shop/confirm_order.js"></script>
 <script type="text/javascript" src="/xcview/js/shop/order_center.js"></script>
-<script>
-	// 点击取消订单提示 
-	$(".cancel_order").click(function(){
-		$(".removeitem").show();
-	});
-	// 点击取消隐藏奇效订单提示
-	$(".countermand").click(function(){
-		$(".removeitem").hide();
-	});
-</script>
+
 
 </html>
