全部评价添加刷新。修改直播间bug

--- a/wechat/src/main/webapp/xcview/html/details.html
+++ b/wechat/src/main/webapp/xcview/html/details.html
@@ -423,6 +423,11 @@ $(function(){
     .document_ceneter_width{
         transform: scale(1, 1) translate(-7.10543e-15px, 3.90799e-14px) !important;
     }
+    
+    /*隐藏浮动提示层*/
+   .cx_mask_transparent{
+   		display: none;
+   }
 </style>
 </head>
 <body style="background: #f8f8f8;overflow: hidden1;">
