--- a/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
+++ b/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
@@ -192,7 +192,7 @@
 	<div class="evaluate" id="li_btn1">
 		<div class="evaluate_main">
 			<script type="text/html" id="evaluate_main">
-			<div class="evaluate_top" onclick="location.href ='/xcview/html/shop/all_evaluation.html'">
+			<div class="evaluate_top" onclick="evaluation()">
 				<span class="title">评价</span>
 				<span class="evaluate_view_all">查看全部 <img src="/xcview/images/shop/view_all.png" alt="" /></span>
 				<div class="both"></div>
@@ -344,7 +344,7 @@
 			<div class="shopping_cart" onclick="location.href ='/xcview/html/shop/shopping_trolley.html '">
 				<img src="/xcview/images/shop/shopping_cart.png" alt="" />
 				购物车
-				<span class="shopping_quantity">12</span>
+				<span class="shopping_quantity">0</span>
 			</div>
 			<div class="deal">
 				<div class="add_cart">加入购物车</div>
