--- a/wechat/src/main/webapp/xcview/html/live_class.html
+++ b/wechat/src/main/webapp/xcview/html/live_class.html
@@ -315,6 +315,16 @@
 			<img src="../images/xing1.png"/>
 			<span></span>
 		</div>
+		<!--节目内容好评-->
+		<div class="my_impression3 cl" style="padding-bottom: 0.3rem;overflow: hidden;">
+			<p>节目内容</p>
+			<img src="../images/face0.png"/>
+			<img src="../images/face0.png"/>
+			<img src="../images/face0.png"/>
+			<img src="../images/face0.png"/>
+			<img src="../images/face0.png"/>
+			<span></span>
+		</div>
 		<!--主播演绎好评-->
 		<div class="my_impression2 cl mar_bot">
 			<p>主播演绎</p>
