修改详情--hide  少了。。修改首页-banner-null属性。删除测试添加属性

--- a/wechat/src/main/webapp/xcview/html/shop/recommend.html
+++ b/wechat/src/main/webapp/xcview/html/shop/recommend.html
@@ -161,7 +161,7 @@
 	<!-- 底部区域结束 -->
 		
 	<!-- 点击购物车出现提示开始 -->
-	<div class="shopping_trolley" style="displayss: block !important;">
+	<div class="shopping_trolley">
 		<div class="shopping_trolley_bg"></div>
 		<div class="shopping_trolley_main" style="height:8.28rem;">
 			<div class="shopping_trolley_center">
