--- a/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
+++ b/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
@@ -587,9 +587,9 @@
 	    	$(this).find("a").addClass("li_a");
 	    	$(this).find(".border_a").show();
 	    	$(".tba_appraise").find("a").removeClass("li_a");
-	    	$(".tba_appraise").find(".border_a").();
+	    	$(".tba_appraise").find(".border_a").hide();
 	    	$(".tba_details").find("a").removeClass("li_a");
-	    	$(".tba_details").find(".border_a").();
+	    	$(".tba_details").find(".border_a").hide();
 	    });
 
 	    // 点击评价
@@ -597,7 +597,7 @@
 	    	$(this).find("a").addClass("li_a");
 	    	$(this).find(".border_a").show();
 	    	$(".tba_intro").find("a").removeClass("li_a");
-	    	$(".tba_intro").find(".border_a").();
+	    	$(".tba_intro").find(".border_a").hide();
 	    	$(".tba_details").find("a").removeClass("li_a");
 	    	$(".tba_details").find(".border_a").hide();
 	    });
