[feat]详情页购物车购买

--- a/wechat/src/main/webapp/xcview/html/shop/shopping_trolley.html
+++ b/wechat/src/main/webapp/xcview/html/shop/shopping_trolley.html
@@ -54,7 +54,7 @@
         <div class="title">购物车</div>
         <div class="message">
             <img src="/xcview/images/shop/newsbg.png" alt=""/>
-            <span class="advices_number">17</span>
+            <span class="advices_number"></span>
         </div>
         <div class="compile" style="displays: none;">编辑</div>
         <div class="finish">完成</div>
