医生动态商品发布成功

--- a/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -502,8 +502,8 @@
 										<li data-style="1">所有商品</li>
 									</ul>
 								</div>
+								<p class="left-explain">推荐指数</p>
 								<div class="our-ratings">
-									 	<span class="left-explain">推荐指数</span>
 								        <img src="/web/images/star-dim.png"/>  
 								        <img src="/web/images/star-dim.png"/>  
 								        <img src="/web/images/star-dim.png"/> 
@@ -511,6 +511,7 @@
 								        <img src="/web/images/star-dim.png"/> 
 								        <span></span>  						
 								</div>	
+								<p class="comment-wrong select-start-null hide">请选择推荐指数！</p>
 								<div class="shopping-search-wrap">
 										<span class="left-shopping z">商品</span>
 										<div class="shopping-search-input z">
@@ -536,7 +537,7 @@
 														</td>
 														<td>请至少选择一件商品请至少选择一件商品</td>
 														<td>
-															<div class="select-ware-img">
+															<div class="select-ware-img" data-id="{{item.id}}">
 															
 															</div>
 														</td>
