首页列表点击事件修改

--- a/wechat/src/main/webapp/xcview/html/shop/search_listings.html
+++ b/wechat/src/main/webapp/xcview/html/shop/search_listings.html
@@ -84,7 +84,7 @@
 		</div>
 		<div class="advices">
 			<img src="/xcview/images/shop/newsbg.png" alt="" class="news" />
-			<span class="advices_number">17</span>
+			<!--<span class="advices_number">17</span>-->
 		</div>
 	</header>
 	<div class="header_hidden_field"></div>
