增加好货分享功能、及接口支持。

--- a/wechat/src/main/webapp/xcview/html/shop/all_evaluation.html
+++ b/wechat/src/main/webapp/xcview/html/shop/all_evaluation.html
@@ -214,6 +214,7 @@
 <script type="text/javascript" src="/xcview/js/common/common.js"></script> 
 <script type="text/javascript" src="/xcview/js/common/template.js"></script>   <!--模板引入-->
 <script type="text/javascript" src="/xcview/js/shop/all_evaluation.js"></script>
+<script type="text/javascript" src="/xcview/js/share/share.js"></script>
 
 <script type="text/javascript" src="/xcview/js/common/popups.js"></script>  <!-- 公用弹框 -->
 
