--- a/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
+++ b/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
@@ -441,6 +441,7 @@
 <script type="text/javascript" src="/xcview/js/common/template.js"></script>   <!--模板引入-->
 
 <script type="text/javascript" src="/xcview/js/shop/commodity_details.js"></script>
+<script type="text/javascript" src="/xcview/js/share/share.js"></script>
 
 <!-- 滑动焦点图引入-->	
 <script src='/xcview/js/shop/ckg/big_img.js?version=35a3532c5b'></script>
