首页，搜索列表页。添加关键字

--- a/wechat/src/main/webapp/xcview/html/shop/search_listings.html
+++ b/wechat/src/main/webapp/xcview/html/shop/search_listings.html
@@ -79,8 +79,8 @@
 		</div>
 		<div class="header">
 			<img src="/xcview/images/sousuo0.png" alt="" />
-			<span calss="header_default">搜索好货</span>
-			<span calss="tacitly_approve">搜索好货</span>
+			<!--<span calss="header_default">搜索好货</span>
+			<span calss="tacitly_approve">搜索好货</span>-->
 		</div>
 		<div class="advices">
 			<img src="/xcview/images/shop/newsbg.png" alt="" class="news" />
